gitops/apps/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2024-01-05T22-17-24Z
        args:
        - server
        - /storage
        ports:
        - name: api
          containerPort: 9000
        - name: console
          containerPort: 45929
        volumeMounts:
        - name: storage
          mountPath: "/storage"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio
